--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .header {
     background-color: #3f6cd4;
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,7 +22,7 @@
 
 .bottom{
     background-color: #fff;
-    min-height: 85vh;
+    min-height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -65,27 +65,40 @@
     padding: 0;
 }
 
-.topButton{
+.topButton {
     background-color: #f5f5f5;
     color: rgba(0, 140, 255, 0.9);
     border: none;
     border-radius: 1rem;
-    font-size: 1.5rem;
     cursor: pointer;
-    min-width: 8rem;
-    max-width: 8rem;
+    width: 8rem;
+    height: 9rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    padding: 2rem 1rem 2rem 1rem;
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 1.5rem 1rem;
     margin: 1rem;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-    min-height: 10rem;
   }
   
-.topButtonText{
-    font-size: 1.25rem;
+  .icon {
+    scale: 1.75;
+    margin-bottom: 0.5rem;
+  }
+  
+  .primaryText {
+    font-size: 1rem;
     color: #000;
-}
+    font-weight: 500;
+    margin: 0;
+  }
+  
+  .secondaryText {
+    font-size: 0.75rem;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    margin: 0;
+    line-height: 1.2;
+  }
