--- a/styles/Template.module.css
+++ b/styles/Template.module.css
@@ -40,3 +40,18 @@
     border-radius: 4rem 4rem 0 0;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
+
+.vectorBackground {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 0;
+  pointer-events: none;
+}
+
+@media (min-width: 500px) {
+  .vectorBackground {
+    display: none;
+  }
+}
